<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="120dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@color/white"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtOldPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/old_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:paddingTop="20dp"
                    android:textColor="@color/darkestBlue" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtNewPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/new_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:paddingTop="20dp"
                    android:textColor="@color/darkestBlue" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="196dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:paddingTop="20dp"
                    android:textColor="@color/darkestBlue" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnChangePass"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/darkestBlue"
                android:gravity="center"
                android:onClick="changePass"
                android:textStyle="bold"
                android:theme="@style/MyButton"
                android:text="@string/change_password" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/shape"
        android:src="@drawable/busdriver" />
</RelativeLayout>